--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -30,6 +30,7 @@
 html,
 body {
   height: 100%;
+  font-family: bilo, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
