added more existing code

--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -13,6 +13,7 @@
 @import "./components/_panels.less";
 @import "./components/_transaction-entry.less";
 @import "./components/_public-profile.less";
+@import "./components/_cards.less";
 
 /*
     Rock Theme Styles
@@ -100,6 +101,85 @@ main {
     padding: 0 3px 0 5px;
     color: @breadcrumb-color;
   }
+}
+
+.image {
+  border-radius: 10px;
+  box-shadow: 5px 0 20px rgba(0, 0, 0, .2);
+  overflow: hidden;
+}
+
+.bcc-icon-lg {
+  width: 50px;
+}
+
+.w-fit-content {
+  width: fit-content !important;
+}
+
+.calendar-selected {
+  background: none !important;
+}
+
+.bcc-login .dropdown-toggle {
+  text-align: center;
+  border-radius: 10px 10px 0 0;
+}
+
+.bcc-login .dropdown-toggle:hover {
+  background: none;
+}
+
+.bcc-login .dropdown-menu {
+  border-radius: 10px;
+}
+
+.bcc-login .dropdown-menu li a {
+  transition: all .15s;
+}
+
+.bcc-login .dropdown-menu li a:hover {
+  background: none;
+  transform: scale(1.05);
+  font-weight: bold;
+}
+
+.bcc-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  border-radius: 10px;
+}
+
+.panel.panel-default {
+  border-radius: 10px;
+}
+
+.btn {
+  border-radius: 10px;
+}
+
+.btn-primary {
+  background-color: var(--bg-two);
+  border: none;
+  transition: all .15s;
+}
+
+.btn-primary:hover {
+  background-color: var(--bg-two);
+  opacity: .9;
+  transform: scale(1.05);
+}
+
+.bcc-dropdown .dropdown-toggle {
+  background-color: var(--bg-one);
+}
+
+.bcc-dropdown .dropdown-menu {
+  border-radius: 10px;
 }
 
 @import "_css-overrides.less";
