--- a/Layouts/Site.Master
+++ b/Layouts/Site.Master
@@ -24,7 +24,6 @@
     <title></title>
 
     <script src="<%# System.Web.Optimization.Scripts.Url("~/Scripts/Bundles/RockJQueryLatest" ) %>"></script>
-    <script src="<%# ResolveRockUrl("~~/Assets/Scripts/index.min.js", true )  %>"></script>
 
     <!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -102,5 +101,7 @@
 		        </ProgressTemplate>
         </asp:UpdateProgress>
     </form>
+
+    <script src="/Themes/BaysideRockTheme/Assets/Scripts/index.min.js"></script>
 </body>
 </html>
