--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -1,6 +1,10 @@
 
 // Load Master Styles
 // -------------------------
+@import "../../../Styles/Bootstrap/variables.less";
+@import "../../../Styles/_rock-core.less";
+@import "../../../Styles/_store.less";
+@import "../../../Styles/_rock-variables.less";
 @import "_variables.less";
 @import "_variable-overrides.less";
 @import "_print.less";
