--- a/Styles/_variable-overrides.less
+++ b/Styles/_variable-overrides.less
@@ -7,9 +7,11 @@
 /* FontAwesome End */
 @logo-alignment: left;
 @brand-color: #00aada;
-@link-color: rgb(0,132,137);
+@link-color: #00aada;
 @enable-hero: false;
 @hero-background: #00aeef;
 @logo-padding-desktop: 16px;
 @logo-max-height-desktop: 96px;
 @logo-max-width-desktop: 248px;
+
+@btn-primary-bg: #484848;
