--- a/Styles/_variables.less
+++ b/Styles/_variables.less
@@ -369,8 +369,8 @@
 @btn-default-bg:                 #fff;
 @btn-default-border:             darken(@body-bg, 20%);
 //--
-@btn-primary-color:              #fff;
-@btn-primary-bg:                 @brand-primary;
+@btn-primary-color:              rgb(255, 255, 255);
+@btn-primary-bg:                 #484848;
 @btn-primary-border:             darken(@btn-primary-bg, 5%);
 //--
 @btn-success-color:              #fff;
