--- a/Styles/components/_buttons.less
+++ b/Styles/components/_buttons.less
@@ -1,6 +1,3 @@
-.btn {
-  padding: @padding-base-vertical 22px;
-}
 
 .btn:active,
 .btn.active {
@@ -21,4 +18,17 @@
 .btn-lg,
 .btn-group-lg > .btn {
   padding: @padding-large-vertical @padding-large-horizontal;
+}
+
+.btn {
+  padding: @padding-base-vertical 22px;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+}
+
+.btn-primary {
+  background-color: @btn-primary-bg;
+  border: none;
 }
