--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -14,6 +14,8 @@
 @import "./components/_transaction-entry.less";
 @import "./components/_public-profile.less";
 @import "./components/_cards.less";
+@import "./components/_banners.less";
+@import "./components/_buttons.less";
 
 /*
     Rock Theme Styles
@@ -160,18 +162,6 @@ main {
 
 .btn {
   border-radius: 10px;
-}
-
-.btn-primary {
-  background-color: var(--bg-two);
-  border: none;
-  transition: all .15s;
-}
-
-.btn-primary:hover {
-  background-color: var(--bg-two);
-  opacity: .9;
-  transform: scale(1.05);
 }
 
 .bcc-dropdown .dropdown-toggle {
