--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -111,10 +111,6 @@ main {
   overflow: hidden;
 }
 
-.bcc-icon-lg {
-  width: 50px;
-}
-
 .w-fit-content {
   width: fit-content !important;
 }
@@ -160,16 +156,17 @@ main {
   border-radius: 10px;
 }
 
-.btn {
-  border-radius: 10px;
-}
-
 .bcc-dropdown .dropdown-toggle {
   background-color: var(--bg-one);
 }
 
 .bcc-dropdown .dropdown-menu {
   border-radius: 10px;
+}
+
+.bcc-loading {
+  text-align: center;
+  padding-top: 25vh;
 }
 
 @import "_css-overrides.less";
