--- a/Styles/theme.less
+++ b/Styles/theme.less
@@ -8,6 +8,7 @@
 @import "_variables.less";
 @import "_variable-overrides.less";
 @import "_print.less";
+
 @import "./components/_navbar.less";
 @import "./components/_hero.less";
 @import "./components/_panels.less";
@@ -16,6 +17,9 @@
 @import "./components/_cards.less";
 @import "./components/_banners.less";
 @import "./components/_buttons.less";
+@import "./components/_date-picker.less";
+@import "./components/_inputs.less";
+@import "./components/_dropdown.less";
 
 /*
     Rock Theme Styles
@@ -153,14 +157,6 @@ main {
 }
 
 .panel.panel-default {
-  border-radius: 10px;
-}
-
-.bcc-dropdown .dropdown-toggle {
-  background-color: var(--bg-one);
-}
-
-.bcc-dropdown .dropdown-menu {
   border-radius: 10px;
 }
 
