--- a/Styles/components/_dropdown.less
+++ b/Styles/components/_dropdown.less
@@ -52,6 +52,8 @@
       &:hover {
         background: @dropdown-bg;
         text-decoration: none;
+        cursor: pointer;
+        user-select: none;
       }
     }
   }
