--- a/Styles/components/_dropdown.less
+++ b/Styles/components/_dropdown.less
@@ -32,6 +32,10 @@
     z-index: 100;
     width: 100%;
 
+    &:not([expanded=true]) {
+      display: none;
+    }
+
     .bcc-dropdown-item {
       margin: .5rem;
       padding: 0.25rem;
